--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/AsemBasheer/challenge_3#readme",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "lodash": "^4.6.1",
+    "mongoose": "^5.10.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "express": "^4.17.1"
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
